--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
   </style>
 </head>
 <body>
+  <!-- Autoplay Music -->
+  <audio autoplay loop>
+    <source src="/sounds.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- Content -->
   <h1>Lorenzo C. Badilla</h1>
   <p>
-    Brgy.Timbao Biñan Laguna<br>
+    Brgy. Timbao Biñan Laguna<br>
     badillalorenzo20@gmail.com<br>
     Cell: 09948535527<br>
     Grade: 10<br>
@@ -22,14 +29,14 @@
   <hr>
   <h2>My Favorites Hobbies and Skills</h2>
   <p>
-    Favorites: ColorBlue <br>
+    Favorites: Color Blue<br>
     Hobbies: Playing Online Games, Playing Basketball<br>
-    Skills: Drawing Reading 
+    Skills: Drawing, Reading
   </p>
   <hr>
   <h3>Reflection on HTML Lessons</h3>
   <p>
-    Learning HTML has been a rewarding experience. I've gained a good understanding of basic web page structure and styling.  I look forward to learning more advanced concepts.
+    Learning HTML has been a rewarding experience. I've gained a good understanding of basic web page structure and styling. I look forward to learning more advanced concepts.
   </p>
   <p style="text-align: center;">&copy; 2025 Lorenzo</p>
 </body>
